# siena

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build_test.yml  coverage.yml
src/: lib.rs  tickable.rs  util.rs
src/bus/: mod.rs  testbus.rs
src/cpu_65816/: alu.rs  cpu.rs  instruction.rs  mod.rs  regs.rs
src/cpu_gsu/: cpu.rs  mod.rs  regs.rs  test.rs
src/cpu_sm83/: alu.rs  cpu.rs  instruction.rs  instructions.rs  mod.rs  regs.rs
src/cpu_spc700/: cpu.rs  instruction.rs  regs.rs
src/cpu_upd77c25/: cpu.rs  mod.rs
src/frontend/: channel.rs  gif.rs  mod.rs  sdl.rs  test.rs
src/gameboy/: apu.rs  joypad.rs  lcd.rs  lcd_oam.rs  mod.rs  serial.rs  tickable.rs  timer.rs
src/gameboy/bus/: bus.rs  gbbus.rs  mod.rs  testbus.rs
src/gameboy/cartridge/: cartridge.rs  mbc1.rs  mbc3.rs  mbc5.rs  mod.rs  romonly.rs
src/snes/: cartridge.rs  emulator.rs  joypad.rs  mod.rs
src/snes/apu/: apu.rs  apubus.rs  mod.rs  timers.rs
src/snes/apu/dsp/: DSP-LICENSE.txt  brr_block_decoder.rs  dsp.rs  envelope.rs  filter.rs  gaussian.rs  mod.rs  ring_buffer.rs  voice.rs
src/snes/apu_blargg/: mod.rs
src/snes/bus/: mainbus.rs  mod.rs  testbus.rs
src/snes/coprocessor/: dsp1.rs  dspx.rs  mod.rs  sgb.rs  superfx.rs
src/snes/coprocessor/sa1/: bus.rs  mod.rs
src/snes/cpu_65816/: alu.rs  cpu.rs  instruction.rs  instruction_table.rs  mod.rs  regs.rs
src/snes/cpu_spc700/: cpu.rs  instruction.rs  instruction_table.rs  mod.rs  regs.rs
src/snes/cpu_upd77c25/: cpu.rs  instruction.rs  mod.rs  regs.rs
src/snes/ppu/: bus.rs  color.rs  mod.rs  ppu.rs  render.rs  render_m7.rs  sprites.rs  state.rs  tests.rs  tile.rs
src/test/: mod.rs  peterlemon_65816.rs  peterlemon_bank.rs  peterlemon_gsu.rs  peterlemon_ppu.rs  processortests_65816.rs  processortests_sm83.rs  processortests_spc700.rs
