[package]
name = "souper"
version = "0.1.0"
edition = "2021"
default-run = "souper"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
clap = { version = "4.4.6", features = ["derive"] }
dbg_hex = "0.1.1"
num-derive = "0.4.0"
num-traits = "0.2.16"
sdl2 = { version = "0.35.2", features = ["unsafe_textures"] }
serde_json = "1.0.107"
strum = { version = "0.25.0", features = ["derive"] }
thiserror = "1.0.49"

[profile.test]
opt-level = 3
debug = true
