[package]
name = "siena"
version = "0.1.0"
edition = "2021"
default-run = "siena"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
arrayvec = "0.7.4"
clap = { version = "4.4.6", features = ["derive"] }
colored = "2.0.4"
dbg_hex = "0.1.1"
hex-literal = "0.4.1"
itertools = "0.11.0"
num = "0.4.1"
num-derive = "0.4.0"
num-traits = "0.2.16"
sdl2 = { version = "0.35.2", features = ["unsafe_textures"] }
serbia = "0.4.3"
serde = { version = "1.0.193", features = ["derive", "rc"] }
serde_json = "1.0.107"
sha2 = "0.10.8"
strum = { version = "0.25.0", features = ["derive"] }
thiserror = "1.0.49"

[profile.test]
opt-level = 3
debug = true
